k8s/monitoreo/prometheus/ingress-prometheus.yaml
# k8s/monitoreo/prometheus/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    # Ya no necesitamos reescribir la URL, pero es bueno tener la anotación
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80 # El servicio de Prometheus expone el puerto 80
